RESOLVED FIXED20545
missing #include <unistd.h> in JavaScriptCore/VM/SamplingTool.cpp
https://bugs.webkit.org/show_bug.cgi?id=20545
Summary missing #include <unistd.h> in JavaScriptCore/VM/SamplingTool.cpp
Landry Breuil
Reported 2008-08-27 10:48:11 PDT
with r35941, there is a missing #include <unistd.h> somewhere in JavaScriptCore/VM/SamplingTool.cpp to define usleep(), at least here on OpenBSD. Was building fine with r35249, now it complains about the missing prototype. Thanks, Landry
Attachments
Alexey Proskuryakov
Comment 1 2008-08-28 04:45:04 PDT
Fix committed revision 35965.
Note You need to log in before you can comment on or make changes to this bug.