        Not reviewed, build fix (at least for OpenBSD, posssibly more).

https://bugs.webkit.org/show_bug.cgi?id=20545
        missing #include <unistd.h> in JavaScriptCore/VM/SamplingTool.cpp

        * VM/SamplingTool.cpp: add the missing include.



Canonical link: https://commits.webkit.org/28368@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@35965 268f45cc-cd09-0410-ab3c-d52691b4dbfc